# pokemon

./: Cargo.toml  LICENSE.txt  README.md  shell.nix
data/json/: pokemon.json
data/raw/: shield_non-overworld_encounter_tables.txt  shield_overworld_encounter_tables.txt  shield_raid_encounters_and_drops.txt  sword_non-overworld_encounter_tables.txt  sword_overworld_encounter_tables.txt  sword_raid_encounters_and_drops.txt  sword_shield_battle_tower_pkm_sets.tsv  sword_shield_foreign_stat_info.txt  sword_shield_gigantamax_move_descriptions.tsv  sword_shield_item_flavor.tsv  sword_shield_move_descriptions.tsv  sword_shield_move_info.tsv  sword_shield_moves_learned_by_species-form.tsv  sword_shield_personal_stats_and_evolutions.txt  sword_shield_pokemon_stats.txt  sword_shield_snapped_moves.tsv  sword_shield_static_encounters.tsv  sword_shield_trainers.txt
pokemon_query/: Cargo.toml
pokemon_query/src/: main.rs
pokemon_stats/: Cargo.toml
pokemon_stats/examples/: move_search.rs  population_stats.rs
pokemon_stats/src/: lib.rs  moves.rs  parsing.rs  party.rs  pokemon.rs
