[package]
name = "pokemon_stats"
version = "0.1.0"
authors = ["blargg <tomjankauski@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
csv = "1.1.1"
num = "0.2.0"
serde = { version = "1.0.104", features = [ "derive"] }
serde_json = "1.0.44"
statistical = "1.0.0"
strum = "0.17.1"
strum_macros = "0.17.1"
