[package]
name = "pokemon_stats"
version = "0.1.0"
authors = ["blargg <tomjankauski@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
csv = "1.1.1"
enumset = "0.4.4"
num = "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2.10"
serde = { version = "1.0.104", features = [ "derive"] }
serde_repr = "0.1"
serde_json = "1.0.44"
statistical = "1.0.0"
